--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ python:
   - 2.6
   - 2.7
 install: pip install -r requirements.txt
+before_script: flake8 bugsy
 script: python setup.py develop && py.test tests
