--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,16 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install pytest-cov coveralls
-
 before_script: flake8 bugsy
-
 script: python setup.py develop && py.test --cov bugsy tests
-
 after_success: coveralls
+deploy:
+  provider: pypi
+  distributions: sdist bdist_wheel
+  username: __token__
+  # password: see secret PYPI_PASSWORD variable
+  on:
+    branch: master
+    tags: true
+    os: linux
+    python: 3.7
